Applied High Priority CORS Filter